# atlas-enhancement

./: README.md  authors.txt  requirements.txt
barrel-annotations/: README.md  annotations_to_positions.py  download_hierarchy.py  generate_barrels_nrrd.py  run_annotations.sh  somatosensory_barrels.py  split_barrel_columns.py  transplant_barrels_nrrd.py  transplant_barrels_nrrd_script.py  utils.py  utils_splitter.py
barrel-annotations/metrics/: extract_barrel_centers.py  extract_conicity.py  extract_curvature_displacement.py  extract_ellipticity.py  extract_shell_depth.py  extract_volume_properties.py  get_layer_shells.py  run_metrics.sh  shell_based_depth.py  utils.py
barrel-annotations/metrics/depth_files/: border_positions_A1.feather  border_positions_A2.feather  border_positions_A3.feather  border_positions_Alpha.feather  border_positions_B1.feather  border_positions_B2.feather  border_positions_B3.feather  border_positions_B4.feather  border_positions_Beta.feather  border_positions_C1.feather  border_positions_C2.feather  border_positions_C3.feather  border_positions_C4.feather  border_positions_C5.feather  border_positions_C6.feather  border_positions_D1.feather  border_positions_D2.feather  border_positions_D3.feather  border_positions_D4.feather  border_positions_D5.feather  border_positions_D6.feather  border_positions_D7.feather  border_positions_D8.feather  border_positions_Delta.feather  border_positions_E1.feather  border_positions_E2.feather  border_positions_E3.feather  border_positions_E4.feather  border_positions_E5.feather  border_positions_E6.feather  border_positions_E7.feather  border_positions_E8.feather  border_positions_Gamma.feather  layer_1_shell.feather  layer_23_shell.feather  layer_4_shell.feather  layer_5_shell.feather  layer_6a_shell.feather  layer_6b_shell.feather
examples/: README.md  sscx.py
flatmap/: .gitignore  README.md
flatmap/code/: .gitignore  Makefile
flatmap/code/ApprEllipse/: ApprEllipse.cxx  ApprEllipse.mk  Makefile
flatmap/code/LaplaceGaussSmooth/: .gitignore  Makefile  lapgasm3d_full.c  lapgasm3d_full.cm
flatmap/code/flatpath/: .gitignore  Makefile  common_footer.mk  common_header.mk  flatmap_triangles.mk  interp_field.c  interp_field.h  main.c  main.cm  streamline.c  streamline.cm  streamline.h  xij.tsv
flatmap/code/flatpath/src/: interp_field.cm  main.cm  streamline.cm
flatmap/code/flatpath/test/: depth.txt.ref  dimensions.txt  dots.txt.ref  height.txt
flatmap/code/kimlab/: Makefile  README.md  extract_flatmap.m  kimlab_flatmap.py
flatmap/code/metrics/: best_line_fit.py  common.mk  coverage.py  divergence.py  flatmap_util.py  laplacian.py  orthogonality.py  pairwise_preimage_continuity.py  per_voxel.R  pixel_metric.gnuplot  preimage_connectedness.py  preimage_geometry.py  preimage_size.py  preimage_size_uniformity.py  tqdm_joblib_bridge.py  trsqrpyr.py  usage_fraction.py
flatmap/code/other/: README.md  alltoh5.sh  bbox.py  boundary.py  discretize.py  distance_metric.py  downsample.py  dumpvalues.py  flat_morpho.py  flat_usage.py  flatdots.py  flatmap.mk  flatmap_hexgrid.mk  flatmap_plot.mk  getpoints.py  gini_coeff.py  h5config.m4  hexassign.sh  lift.py  lift_intxy.py  make_flatmap.py  mapvoxels.py  meandot.awk  mesh2off.awk  nhood_cc.py  off2mesh.awk  perc_goodfit.py  perc_lccratio_near1.py  perc_ncomp1.py  pervox.R  pixel_metric.gnuplot  pixel_metric.py  projPlane.awk  projSphere.awk  regions_acronym.py  regions_byindex.py  square_area_radius.gnuplot  stats.R  triangles.py  trsqrpyr.py  (+1 more)
flatmap/code/surf_cgal/: .gitignore  CMakeLists.txt  Extract_Isosurface.cxx  Flatten_Authalic.cxx  Flatten_Authalic_Iterative.cxx  Flatten_Authalic_Iterative_convex.cxx  Flatten_Authalic_Iterative_parametric.cxx  Flatten_Authalic_convex.cxx  Flatten_Authalic_custom.cxx  Flatten_Authalic_parametric.cxx  Flatten_common.hpp  Makefile  Nearest_KNN.cxx  Reconstruct_JetAdv.cxx  Reconstruct_PCAdv.cxx  Reconstruct_PCAlpha.cxx
flatmap/code/surf_cgal/mkl/: CMakeLists.txt  Flatten_Authalic_Iterative.cxx  Flatten_Authalic_Iterative_convex.cxx  Flatten_Authalic_Iterative_parametric.cxx  Flatten_common.hpp
flatmap/code/utils/: best_line_fit.py  count_bad_vtx.awk  discretize_flatmap.py  dump_values.py  extract_dots.py  extract_dots_largest_cc.py  extract_iso_voxels.py  extract_nrrd_z.py  flat_hexgrid.py  flatmap_util.py  flatplot.py  get_dimensions.py  get_lobe.py  get_mean_sd.py  make_flatmap.py  mirror_hemi.py  nrrd_to_bingz.py  off2ply.awk  parse_cmap.py  plot_heatmap.py  ply2off.awk  resample.py  setvoxels.py  split_coordinates.py  tqdm_joblib_bridge.py  trsqrpyr.py
flatmap/examples/: README.md  genfiles_cerebellum.mk  genfiles_isocortex.mk  user_config_cerebellum.mk  user_config_isocortex.mk  user_config_isocortex_shape_match.mk  user_config_isocortex_shaped.mk  user_config_sscx.mk
flatmap/notebooks/: Comparing AIBS to our flatmap.ipynb  README.md  flatmap_comparison.ipynb  requirements.txt
flatmap/workflow/: .gitignore  Makefile  TODO.md  common_footer.mk  common_header.mk  config.mk  os_detect.mk  stage.mk  user_config_sscx.mk  userdata.mk
flatmap/workflow/01_stageI/: Makefile  config.mk
flatmap/workflow/01_stageI/01_extract_surface/: Makefile  README.md  config.mk
flatmap/workflow/01_stageI/02_reconstruct_mesh/: Makefile  config.mk
flatmap/workflow/01_stageI/03_refine_mesh/: Makefile  config.mk
flatmap/workflow/01_stageI/04_flatten_mesh/: .gitignore  Makefile  README.md  config.mk
flatmap/workflow/02_stageII/: config.mk
flatmap/workflow/02_stageII/01_streamlines/: Makefile  README.md  config.mk
flatmap/workflow/02_stageII/02_intersections/: Makefile  config.mk
flatmap/workflow/03_stageIII/: config.mk
flatmap/workflow/03_stageIII/01_nearest/: Makefile  config.mk
flatmap/workflow/03_stageIII/02_flatmap/: Makefile  config.mk
flatmap/workflow/03_stageIII/03_discretization/: Makefile  config.mk
flatmap/workflow/applications/: Makefile  config.mk
flatmap/workflow/metrics/: Makefile  config.mk
flatmap/workflow/postproc/: config.mk
notebooks/: Comparing AIBS to our flatmap.ipynb  structures.json
(+55 files in other folders)
